api structure updated
